@@ -1,3 +1,8 @@
+2009-11-25  Miguel de Dios <miguel.dedios@artica.es>
+
+	* godmode/alerts/alert_list.php: add column status of alert in alert
+	management view in agent.
+
 2009-11-22  Raul Mateos  <raulofpandora@gmail.com>
 
 	* images/spinner.png, images/background-li.png: New images converted
